[metadata]
name=rlxutils
description=rlx general purpose utils
author = raul ramos
author_email = rramosp@unal.edu.co
licence = MIT
description_file=README.md
license_files=LICENSE.txt
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/rramosp/rlxutils/

